put the sidebar on the right

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ aside {
     width: 30%;
     padding-left: 50px;
     margin-left: 15px;
-    float: left;
+    float: right;
     font-style: italic;
     background-color: lightgray;
     height: 100vh;
