--- a/style.css
+++ b/style.css
@@ -7,6 +7,23 @@
     background-color: #2f343f; 
     padding-right: 1%;
     padding-left: 1%;
+    z-index: 0;
+    transition: transform 0.5s cubic-bezier(0.77,0.2,0.05,1.0);
+}
+
+.checkbox-with-text {
+    position: fixed;
+    z-index: 1;
+}
+
+label {
+    font-size: 10pt;
+    color: white;
+    display: block;
+}
+
+#sidebar-toggle {
+    position: relative;
 }
 
 .sidebar button {
