--- a/style.css
+++ b/style.css
@@ -71,6 +71,13 @@ footer {
     width: 100%;
 }
 
+#game-settings {
+    display: block;
+    position: absolute;
+    top: 0;
+    right: 0;
+}
+
 progress {
     box-sizing: border-box;
     width: 100%;
