--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-.sidebar {
+#sidebar {
     width: 15%;
     height: 100%;
     position: fixed;
@@ -12,7 +12,7 @@
 }
 
 .checkbox-with-text {
-    position: fixed;
+    position: absolute;
     z-index: 1;
 }
 
@@ -26,11 +26,7 @@ img {
     max-width: 100%;
 }
 
-#sidebar-toggle {
-    position: relative;
-}
-
-.sidebar a {
+#sidebar a {
     display: block;
     width: 100%;
     text-align: center;
@@ -46,13 +42,19 @@ img {
 }
 
 #contents {
-    min-height: 100vh;
     padding-left: 20px;
     margin-left: 17%;
 }
 
+#my-websit {
+    color: lightgray;
+    text-align: center;
+    padding-bottom: 5%;
+    margin-top: 20%
+}
+
 footer {
-    position: fixed;
+    position: static;
     bottom: 0;
     right: 0;
     text-align: right;
@@ -66,14 +68,7 @@ footer {
     right: 0;
 }
 
-#typing-game-input {
-    box-sizing: border-box;
-    width: 100%;
-}
-
 progress {
-    box-sizing: border-box;
-    width: 100%;
     display: block;
     margin-bottom: 10px;
     border-radius: 7px; 
@@ -108,4 +103,72 @@ footer a {
     font-family: "Comic Sans MS";
     font-size: 40pt;
     color: #2f343f;
+}
+
+#difficulty-label {
+    color: black; 
+    font-size: 20pt; 
+    position: absolute; 
+    top: 20px; 
+    right: 20px; 
+    text-align: right
+}
+
+#difficulty-slider {
+    width: 10%;
+    position: absolute;
+    top: 80px;
+    right: 0;
+    margin-right: 20px
+}
+
+#healthbar {
+    width: 100%;
+    box-sizing: border-box;
+}
+
+#typing-game-input {
+    box-sizing: border-box;
+    width: 100%;
+}
+
+.center {
+    margin: 0 auto;
+}
+
+@media screen and (max-width: 700px) {
+    * { 
+        font-size: 20pt;
+    }
+    #sidebar {
+        width: 100%;
+        height: 42%;
+        position: absolute;
+    }
+    #contents {
+        margin-left: 0;
+        margin-top: 88%;
+    }
+    #my-websit {
+        margin-top: 5%
+    }
+    #sidebar a {
+        display: inline-block;
+        text-align: center;
+        text-decoration: none;
+    }
+    #sidebar-checkbox-with-text {
+        display: none;
+    }
+    #difficulty-label {
+        position: static;
+    }
+    #difficulty-slider {
+        position: static;
+        width: 100%;
+    }
+    #restart-game {
+        posiion: static;
+    }
+
 }
