--- a/style.css
+++ b/style.css
@@ -136,6 +136,13 @@ footer a {
     margin: 0 auto;
 }
 
+#paste {
+    font-size: 75%;
+}
+#paste h1, h2, h3, h4, h5, h6 {
+    font-size: 100%;
+}
+
 @media screen and (max-width: 700px) {
     * { 
         font-size: 20pt;
