remove button behaviour from h6s

--- a/src/style.css
+++ b/src/style.css
@@ -154,13 +154,16 @@ footer a {
 #paste h5, h6 {
     font-size: 1em;
     margin-bottom: 0.5em;
-    cursor: pointer;
+}
+#paste h6 {
+    margin-top: 1em;
 }
 #paste h5 {
-    margin-top: 2em;
+    margin-top: 3em;
+    cursor: pointer;
 }
 
-#paste h5:hover, h6:hover {
+#paste h5:hover {
   background-color: #ccc;
 }
 
