add some info to index.html

--- a/src/style.css
+++ b/src/style.css
@@ -34,6 +34,13 @@ img {
     max-width: 100%;
 }
 
+#contents a {
+    color: blue;
+}
+#contents a:visited {
+    color: purple;
+}
+
 #sidebar a {
     display: block;
     width: 100%;
