--- a/style.css
+++ b/style.css
@@ -166,12 +166,30 @@ footer a {
     margin-top: 1em;
 }
 #paste h5 {
-    margin-top: 3em;
+    margin-top: 1em;
     cursor: pointer;
 }
 
 #paste h5:hover {
   background-color: #ccc;
+}
+
+#paste div.hidden {
+    display: none;
+}
+
+#paste div.notes {
+    margin-bottom: 2em;
+}
+
+#hint {
+    color: gray;
+    font-size: 0.5em;
+    margin-top: 0.5em;
+    padding: 1em;
+    border: dashed;
+    border-radius: 10px;
+    border-color: gray;
 }
 
 @media screen and (max-width: 700px) {
